<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".repoDetails.RepoDetailsFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/gap_medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                tools:background="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_forks"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_avatar"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/gap_small"
                android:text="@string/user_s"/>

            <TextView
                android:id="@+id/tv_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_avatar"
                app:layout_constraintTop_toBottomOf="@id/tv_user"
                android:layout_marginStart="@dimen/gap_small"
                android:text="@string/repository_s"/>

            <TextView
                android:id="@+id/tv_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_avatar"
                app:layout_constraintTop_toBottomOf="@id/tv_repo"
                android:layout_marginStart="@dimen/gap_small"
                android:text="@string/watchers_d"/>


            <TextView
                android:id="@+id/tv_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_avatar"
                app:layout_constraintTop_toBottomOf="@id/tv_watchers"
                android:layout_marginStart="@dimen/gap_small"
                android:text="@string/forks_d"/>

            <TextView
                android:id="@+id/tv_empty_list"
                app:layout_constraintTop_toBottomOf="@id/tv_forks"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/tag_list_is_empty"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_forks"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>